Add outermost part of an eventual js interaface

--- a/vignettes/details.Rmd
+++ b/vignettes/details.Rmd
@@ -54,3 +54,7 @@ The default behaviour of the odin1 to odin2 compatibility checks.  If set, this 
 ## `odin2.check_bounds`
 
 The default behaviour of odin2 array bounds checks.  If set, this should be a string suitable to pass to the `check_bounds` argument of `odin2::odin` (one of `error`, `warning` or `disable`); see the help for `odin2::odin` for a description of the possible options.
+
+## `odin2.target`
+
+The default value for the `target` argument to `odin2::odin`.  If set, this should be one of `cpp` or `js` (or, in future, `cuda`).
